--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="pl">
 	<head>
 		<meta charset="utf-8">
+		<link rel="stylesheet/stylesheet" href="style.css" >
+		<script src="javascript.js"> </script>
 		<title>tytuł</title>
 	
 	</head>
 
 	<body>
-		<h1>Index</h1>
+		<h1 class="header">Index</h1>
   </body>
